--- a/Schedulingpods/Node-Affinity.yaml
+++ b/Schedulingpods/Node-Affinity.yaml
@@ -12,10 +12,10 @@ spec:
         - weight: 1
           preference:
             matchExpressions:
-              - key: purpose
+              - key: kubernetes.io/hostname
                 operator: In
                 values: 
-                  - testing
+                  - ip-172-31-9-172
   containers:
     - name: nginx
       image: nginx:1.23
