--- a/Schedulingpods/Pod-Affinity.yaml
+++ b/Schedulingpods/Pod-Affinity.yaml
@@ -4,22 +4,51 @@ kind: Pod
 metadata:
   name: paffinity
   labels:
-    app: nginx
+    web: nginx-pod
+  namespace: default
 spec:
   affinity:
     podAffinity:
-      preferredDuringSchedulingIgnoredDuringExecution:
-        - weight: 1
-          podAffinityTerm:
-            topologyKey: affinity
-            labelSelector:
-              matchExpressions:
-                - key: app
-                  operator: NotIn
-                  values:
-                    - nginx
+      requiredDuringSchedulingIgnoredDuringExecution:
+        - labelSelector:
+            matchExpressions:
+              - key: app
+                operator: In
+                values:
+                  - nginx
+          topologyKey: "kubernetes.io/hostname"
   containers:
     - image: nginx
       name: nginx
       ports:
-        - containerPort: 80                  
+        - containerPort: 80   
+
+
+---
+apiVersion: v1	
+kind: Pod
+metadata:
+  name: paffinity
+  labels:
+    web: nginx-pod
+  namespace: default
+spec:
+  affinity:
+    podAffinity:
+      preferredDuringSchedulingIgnoredDuringExecution:
+        - podAffinityTerm:
+            labelSelector:
+              matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                    - nginx
+            topologyKey: "kubernetes.io/hostname" 
+          weight: 1
+  containers:
+  - image: nginx
+    name: nginx
+    ports:
+      - containerPort: 80   
+        
+  
