--- a/Deployment/strategies.yaml
+++ b/Deployment/strategies.yaml
@@ -3,8 +3,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deploy
-  labels:
-    app: nginx
+  annotations: 
+    kubernetes.io/change-cause: "update to httpd"
+  #labels:
+   # app: nginx
 spec:
   minReadySeconds: 2
   replicas: 2
@@ -21,10 +23,11 @@ spec:
       name: nginx
       labels:
         app: nginx
+        layer: web
     spec:
       containers:
-        - image: nginx:1.23
-          name: nginx
+        - image: httpd
+          name: mysql
           ports:
             - containerPort: 80
               protocol: TCP
