--- a/internalservice/nginx-svc.yaml
+++ b/internalservice/nginx-svc.yaml
@@ -10,8 +10,8 @@ spec:
     app: nginx
   type: ClusterIP
   ports:
-    - name: nginx-svc
-      port: 81
+    - name: nginx-rs
+      port: 80
       targetPort: 80
       protocol: TCP
       
