--- a/kustomization/base/service.yaml
+++ b/kustomization/base/service.yaml
@@ -10,4 +10,7 @@ spec:
     app: nginx
   type: LoadBalancer
   ports:
-    - name: nginx-svc  
+    - name: nginx-rs
+      port: 80
+      targetPort: 80
+      protocol: TCP  
