--- a/kustomization/dashboard/service.yaml
+++ b/kustomization/dashboard/service.yaml
@@ -10,5 +10,8 @@ spec:
     app: nginx
   type: LoadBalancer
   ports:
-    - name: nginx-svc  
+    - name: nginx-rs
+      port: 80
+      targetPort: 80
+      protocol: TCP  
       
