--- a/statefulset.yaml
+++ b/statefulset.yaml
@@ -25,11 +25,20 @@ spec:
             - containerPort: 3306 
           volumeMounts:
             - mountPath: /var/lib/mysql
-              name: mysql-vol  
+              name: persistentvolume 
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              value: rootpassword
+            - name: MYSQL_DATABASE
+              value: database
+            - name: MYSQL_USER
+              value: user
+            - name: MYSQL_PASSWORD
+              value: password           
       volumes:
-        - name: mysql-vol
-          emptyDir:
-            sizeLimit: 500Mi         
+        - name: persistentvolume
+          persistentVolumeClaim:
+            claimName: pvc-claim
 
 ---
 apiVersion: v1	
@@ -47,4 +56,31 @@ spec:
     - name: mysql-svc
       port: 80
       targetPort: 80
-      protocol: TCP            
+      protocol: TCP 
+
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  labels: 
+    app: nginx
+  name: mystroageclass
+provisioner: kubernetes.io/aws-ebs
+parameters:
+  type: gp2
+
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: pvc-claim
+  labels:
+    app: mysql
+spec:
+  accessModes: 
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 1Gi
+  storageClassName: mystroageclass
