--- a/statefulset.yaml
+++ b/statefulset.yaml
@@ -25,7 +25,7 @@ spec:
             - containerPort: 3306 
           volumeMounts:
             - mountPath: /var/lib/mysql
-              name: persistentvolume 
+              name: pvc-claim
           env:
             - name: MYSQL_ROOT_PASSWORD
               value: rootpassword
@@ -34,29 +34,21 @@ spec:
             - name: MYSQL_USER
               value: user
             - name: MYSQL_PASSWORD
-              value: password           
-      volumes:
-        - name: persistentvolume
-          persistentVolumeClaim:
-            claimName: pvc-claim
-
----
-apiVersion: v1	
-kind: Service
-metadata:
-  name: mysql-svc
-  labels:
-    app: mysql
-spec:
-  selector:
-    app: mysql
-  type: ClusterIP
-  clusterIP: None
-  ports:
-    - name: mysql-svc
-      port: 80
-      targetPort: 80
-      protocol: TCP 
+              value: password
+  volumeClaimTemplates:
+    - apiVersion: v1
+      kind: PersistentVolumeClaim
+      metadata:
+        labels:
+          app: mysql
+        name: pvc-claim
+      spec:
+        accessModes:
+          - ReadWriteOnce
+        resources:
+          requests:
+            storage: 1Gi
+        storageClassName: mystroageclass
 
 ---
 apiVersion: storage.k8s.io/v1
@@ -65,22 +57,10 @@ metadata:
   labels: 
     app: nginx
   name: mystroageclass
-provisioner: kubernetes.io/aws-ebs
+provisioner: ebs.csi.aws.com
 parameters:
-  type: gp2
+  type: gp3           
+                        
+                 
+      
 
-
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: pvc-claim
-  labels:
-    app: mysql
-spec:
-  accessModes: 
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 1Gi
-  storageClassName: mystroageclass
