--- a/secrets/mysql-env.yaml
+++ b/secrets/mysql-env.yaml
@@ -1,9 +1,9 @@
 ---
-apiVersion: v1	
+apiVersion: v1
 kind: Pod
 metadata:
   name: mysql-pod
-  labels:
+  labels: 
     app: mysql
 spec:
   containers:
@@ -11,13 +11,10 @@ spec:
       name: mysql
       ports:
         - containerPort: 3306
-      env:
+      env: 
         - name: MYSQL_DATABASE
-          value: database  
+          value: ZGF0YWJhc2U=
         - name: MYSQL_USER
-          value: user
-        - name: MYSQL_PASSWORD 
-          value: password
-            
-
-       
+          value: dXNlcg==
+        - name: MYSQL_PASSWORD
+          value: cGFzc3dvcmQ=   
