--- a/storages/persistentvolumes/pv-env.yaml
+++ b/storages/persistentvolumes/pv-env.yaml
@@ -1,3 +1,4 @@
+# storage class
 ---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
@@ -11,6 +12,8 @@ reclaimPolicy: Retain
 parameters:
   type: gp2
 
+
+# pod with environmental variables
 ---
 apiVersion: v1	
 kind: Pod
@@ -41,6 +44,8 @@ spec:
       persistentVolumeClaim:
         claimName: pvc-claim
 
+
+# persistent volume claim
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
