--- a/storages/persistentvolumes/pv-storageclass.yaml
+++ b/storages/persistentvolumes/pv-storageclass.yaml
@@ -1,3 +1,4 @@
+# storage class
 ---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
@@ -9,6 +10,8 @@ provisioner: kubernetes.io/aws-ebs
 parameters:
   type: gp2
 
+
+# pod
 ---
 apiVersion: v1	
 kind: Pod
@@ -30,6 +33,8 @@ spec:
       persistentVolumeClaim:
         claimName: pvc-claim
 
+
+# persistent volume claim
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
