--- a/configmap/mysql-env.yaml
+++ b/configmap/mysql-env.yaml
@@ -18,6 +18,7 @@ spec:
           value: user
         - name: MYSQL_PASSWORD 
           value: password
-            
+        - name: MYSQL_ROOT_PASSWORD
+          value: root-password  
 
        
