--- a/secrets/mysql-env.yaml
+++ b/secrets/mysql-env.yaml
@@ -17,4 +17,6 @@ spec:
         - name: MYSQL_USER
           value: dXNlcg==
         - name: MYSQL_PASSWORD
-          value: cGFzc3dvcmQ=   
+          value: cGFzc3dvcmQ=  
+        - name: MYSQL_ROOT_PASSWORD
+          value: cm9vdC1wYXNzd29yZCA=    
