--- a/Ingress/Deployment.yaml
+++ b/Ingress/Deployment.yaml
@@ -19,7 +19,8 @@ spec:
   template:
     metadata:
       name: identity-pod
-      app: identity
+      labels:
+        app: identity
     spec:
       containers:
         - image: madhurichinta/identity:1.0
@@ -48,7 +49,8 @@ spec:
   template:
     metadata:
       name: basket-pod
-      app: basket
+      labels:
+        app: basket      
     spec:
       containers:
         - image: madhurichinta/basket:1.0
@@ -77,7 +79,8 @@ spec:
   template:
     metadata:
       name: catalog-pod
-      app: catalog
+      labels:
+        app: catalog      
     spec:
       containers:
         - image: madhurichinta/catalog:1.0
@@ -107,7 +110,8 @@ spec:
   template:
     metadata:
       name: order-pod
-      app: order
+      labels:
+        app: order
     spec:
       containers:
         - image: madhurichinta/order:1.0
