--- a/Ingress/service.yaml
+++ b/Ingress/service.yaml
@@ -54,4 +54,18 @@ spec:
     - protocol: TCP
       port: 80
       
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: spc
+  name: spc-svc 
+spec:
+  selector:
+    app: spc
+  ports:
+    - protocol: TCP
+      port: 8080
+            
                                 
