--- a/Ingress/service.yaml
+++ b/Ingress/service.yaml
@@ -68,4 +68,18 @@ spec:
     - protocol: TCP
       port: 8080
             
-                                
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: apache
+  name: apache-svc 
+spec:
+  selector:
+    app: apache
+  ports:
+    - protocol: TCP
+      port: 8080
+            
+                                                        
